@@ -18,6 +18,8 @@
 	- in authzone check that node exists before adding rrset.
 	- in unbound-anchor, use readwrite memory BIO.
 	- assertion in autotrust that packed rrset is formed correctly.
+	- Fix memory leak when message parse fails partway through copy.
+	- remove unused udpsize assignment in message encode.
 
 11 September 2018: Wouter
 	- Fixed unused return value warnings in contrib/fastrpz.patch for
